--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       FLASK_DEBUG: "1"
       FLASK_APP: "tmdb"
       FLASK_ENV: "development"
-      TMDB_BASE_URL: "https://api.themoviedb.org/3"
+      TMDB_API_BASE_URL: "https://api.themoviedb.org/3"
       TMDB_API_KEY: "1f54bd990f1cdfb230adb312546d765d"
       TMDB_IMAGE_BASE_URL: "https://image.tmdb.org/t/p"
 
@@ -24,6 +24,6 @@ services:
     ports:
       - "8000:8000"
     environment:
-      TMDB_BASE_URL: "https://api.themoviedb.org/3"
+      TMDB_API_BASE_URL: "https://api.themoviedb.org/3"
       TMDB_API_KEY: "1f54bd990f1cdfb230adb312546d765d"
       TMDB_IMAGE_BASE_URL: "https://image.tmdb.org/t/p"
