Add tests service on docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,3 +27,13 @@ services:
       TMDB_API_BASE_URL: "https://api.themoviedb.org/3"
       TMDB_API_KEY: "1f54bd990f1cdfb230adb312546d765d"
       TMDB_IMAGE_BASE_URL: "https://image.tmdb.org/t/p"
+
+  tests:
+    build: .
+    command: pytest -vv
+    volumes:
+      - .:/app
+    environment:
+      TMDB_API_BASE_URL: "https://api.themoviedb.org/3"
+      TMDB_API_KEY: "1f54bd990f1cdfb230adb312546d765d"
+      TMDB_IMAGE_BASE_URL: "https://image.tmdb.org/t/p"
