--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,3 +37,9 @@ services:
       TMDB_API_BASE_URL: "https://api.themoviedb.org/3"
       TMDB_API_KEY: "1f54bd990f1cdfb230adb312546d765d"
       TMDB_IMAGE_BASE_URL: "https://image.tmdb.org/t/p"
+
+  flake8:
+    build: .
+    command: flake8 tmdb/
+    volumes:
+      - .:/app
